<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/profile_follow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/profile_follow_button"
            android:minHeight="30dp"
            android:padding="0dp"
            android:text="@string/profile_follow_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/profile_rating_label"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/profile_following_button"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/profile_followers_button"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:textAlignment="center">

                <TextView
                    android:id="@+id/profile_user_rating"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/profile_user_following"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/profile_user_followers"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>