<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="knk.ee.neverland.activities.CreateQuestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/create_quest_quest_name_title"
        android:textSize="@dimen/standard_font_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/create_quest_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/input_box_background"
        android:textSize="@dimen/standard_font_size"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/create_quest_quest_desc_title"
        android:textSize="@dimen/standard_font_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/create_quest_desc"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/input_box_background"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textAlignment="gravity"
        android:textSize="@dimen/standard_font_size" />

    <Button
        android:id="@+id/create_quest_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/create_quest_submit_button" />

    <ProgressBar
        android:id="@+id/submitting_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

</LinearLayout>
